--- a/v2/server/package.json
+++ b/v2/server/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "jwt-decode": "^4.0.0",
+    "crypto-js": "^4.2.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.0",
     "tslib": "^2.3.0",
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.14.6",
     "jasmine-core": "~5.1.0",
