--- a/v2/server/package.json
+++ b/v2/server/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "crypto-js": "^4.2.0",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.0",
     "tslib": "^2.3.0",
