--- a/v2/server/package.json
+++ b/v2/server/package.json
@@ -16,14 +16,16 @@
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/google-maps": "^18.0.6",
     "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.12.0",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
